--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #github pages conf
 remote_theme: "mmistakes/minimal-mistakes"
 #theme specific conf
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en"
