Move About to own filewq

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   bio              : "Beer, Paddles and Code (not necessairly in that order)"
   location         : "Hong Kong"
   email            :
-  uri              :
+  uri              : "https://jamiewildehk.github.io"
   bitbucket        :
   codepen          :
   dribbble         :
