--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 #github pages conf
 remote_theme: "mmistakes/minimal-mistakes"
+include: ["_pages"]
 #theme specific conf
 minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
