--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en"
-title                    : "Github Page"
+title                    : "Jamie's Page"
 title_separator          : "-"
 name                     : "Jamie Wilde"
 description              : ""
